--- a/index.html
+++ b/index.html
@@ -90,15 +90,15 @@
                             <div class="intro-project w-100">
                                 <div class="intro-title ">
                                     <div id="hero_title" class="mt-20">
-                                        <h1 class="title text-upper">O seu escritório de arquitetura não vai mais precisar de indicações e busca ativa de clientes</h1>
+                                        <h1 class="title text-upper">O seu e-commerce não vai mais precisar de [...]</h1>
                                     </div>
-                                    <p class="mt-20 max-w750 h3 theme-color">Vender produtos semanais de maneira previsível se tornará a parte mais simples da sua rotina</p>
+                                    <p class="mt-20 max-w750 h3 theme-color">Vender produtos de maneira previsível se tornará a parte mais simples da sua rotina</p>
                                     <div class="dsn-def-btn dsn-hover-icon dsn-icon-heading-color mt-40 d-flex">
                                         <a class="dsn-btn dsn-border border-color-default  background-section has-icon-left" href="#page_wrapper" rel="nofollow">
                                             <span class="dsn-icon dsn-bg-before btn-icon-left heading-color z-index-1">
                                                 <i class="fas fa-angle-right" aria-hidden="true"></i>
                                             </span>
-                                            <span class="title-btn p-relative z-index-1">Assista o vídeo com muita atenção (são menos de 4 minutos)</span>
+                                            <span class="title-btn p-relative z-index-1">Assista o vídeo com muita atenção (são menos de x minutos)</span>
                                         </a>
                                     </div>
                                 </div>
@@ -126,7 +126,7 @@
                     </div>
                     <div class="vsl-button dsn-normal-btn dsn-icon-heading-color d-flex justify-content-center">
                         <a class="dsn-btn dsn-border border-color-default vid background-section move-circle has-icon-left"
-                           href="https://vimeo.com/928020475" title="Assista ao vídeo" target="_blank" rel="nofollow" data-dsn="parallax">
+                           href="link" title="Assista ao vídeo" target="_blank" rel="nofollow" data-dsn="parallax">
                             <span class="dsn-icon dsn-bg-before heading-color z-index-1">
                                 <i class="fas fa-play"></i>
                             </span>
