--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
                             </p>
                             <div class="cta-button dsn-normal-btn dsn-icon-heading-color d-flex justify-content-center mt-60">
                                 <a class="dsn-btn dsn-border border-color-default background-theme border-rdu move-circle"
-                                data-dsn="parallax" href="https://form.respondi.app/9KjT5d6L" target="_blank" data-dsn-text="Começar agora">
-                                    <span class="title-btn p-relative  z-index-1 ">Começar agora</span>
+                                data-dsn="parallax" href="https://form.respondi.app/M9wZTsb2" target="_blank" data-dsn-text="Quero Escalar Meu E-Commerce Agora">
+                                    <span class="title-btn p-relative  z-index-1 ">Quero Escalar Meu E-Commerce Agora</span>
                                 </a>
                             </div>
                         </div>
@@ -468,8 +468,8 @@
                             </p>
                             <div class="cta-button dsn-normal-btn dsn-icon-heading-color d-flex justify-content-center mt-60">
                                 <a class="dsn-btn dsn-border border-color-default background-theme border-rdu move-circle"
-                                data-dsn="parallax" href="https://form.respondi.app/9KjT5d6L" target="_blank" data-dsn-text="Começar agora">
-                                    <span class="title-btn p-relative  z-index-1 ">Começar agora</span>
+                                data-dsn="parallax" href="https://form.respondi.app/M9wZTsb2" target="_blank" data-dsn-text="Estou Pronto Para Escalar Meu E-commerce">
+                                    <span class="title-btn p-relative  z-index-1 ">Estou Pronto Para Escalar Meu E-commerce</span>
                                 </a>
                             </div>
                         </div>
@@ -497,11 +497,11 @@
                                         </div>
                                     </div>
                                     <ul class="dsn-socials box-social mt-20 dsn-icon-heading-color">
-                                        <li><a href="https://www.instagram.com/manure.marketing" target="_blank" rel="nofollow"
+                                        <li><a href="https://www.instagram.com/fapas.digital" target="_blank" rel="nofollow"
                                             class="init-color move-circle border-color-default" data-dsn="parallax"><span
                                             class="dsn-icon"><i class="fab fa-instagram"></i></span><span>IG</span></a>
                                         </li>
-                                        <li><a href="https://www.facebook.com/manure.marketing" target="_blank" rel="nofollow"
+                                        <li><a href="https://www.facebook.com/fapas.digital" target="_blank" rel="nofollow"
                                             class="init-color move-circle border-color-default" data-dsn="parallax"><span
                                                 class="dsn-icon"><i class="fab fa-facebook-f"></i></span><span>FB</span></a>
                                         </li>
