--- a/index.html
+++ b/index.html
@@ -192,9 +192,9 @@
                                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960"><path d="M40-257v-30q0-35 38-58t99-23l18 1 22 3q-6 15-9 30-3 14-3 29v48H40Zm240 0v-45q0-24 14-44t41-35q28-14 64-22 37-7 81-7 45 0 81 7 36 8 64 22 27 15 41 35t14 44v45H280Zm475 0v-48q0-16-2-31-3-15-10-28l23-3 19-1q60 0 98 23 37 23 37 58v30H755Zm-445-31h340v-11q2-36-44-58t-126-22q-79 0-126 22-46 22-44 58v11ZM176-401q-22 0-37-15t-15-37q0-21 15-36 15-16 37-16 21 0 37 16 15 15 15 37 0 20-15 36-15 15-37 15Zm608 0q-21 0-36-15-16-16-16-37t16-36q15-16 37-16t37 16q15 15 15 36 0 22-15 37t-38 15Zm-304-39q-36 0-62-26-26-25-26-62t26-62q25-25 62-25t62 25q26 25 26 62 0 36-25 62-26 26-63 26Zm1-31q23 0 40-16 16-17 16-41t-16-40q-17-17-41-17-23 0-40 17-17 16-17 40t17 41q16 16 41 16Zm-1 183Zm0-240Z"/></svg>
                                     </div>
                                     <div class="service-content p-relative">
-                                        <h3 class="service_title h5">Tenha um fluxo previsível de venda</h4>
+                                        <h3 class="service_title h5">ATRAÇÃO EFICAZ DE CLIENTES</h4>
                                         <div class="service_description mt-10 max-w570 dsn-auto">
-                                            <p>Garanta a estabilidade da seu e-commerce desenvolvendo um fluxo constante de vendas de forma previsível.</p>
+                                            <p>Atrair clientes nunca foi tão fácil. Assuma o controle do crescimento do seu negócio e veja suas vendas dispararem.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -206,9 +206,9 @@
                                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960"><path d="M140-140v-50l31-31v81h-31Zm163 0v-210l30-31v241h-30Zm162 0v-241l30 32v209h-30Zm162 0v-209l31-31v240h-31Zm162 0v-370l31-31v401h-31ZM140-389v-43l260-259 160 160 260-261v44L560-488 400-648 140-389Z"/></svg>
                                     </div>
                                     <div class="service-content p-relative">
-                                        <h3 class="service_title h5">Atraia seus clientes</h4>
+                                        <h3 class="service_title h5">ESCALABILIDADE SEM LIMITES</h4>
                                         <div class="service_description mt-10 max-w570 dsn-auto">
-                                            <p>Comece a finalmente atrair os seus clientes e assuma o controle do crescimento do seu negócio.</p>
+                                            <p>Expanda seu e-commerce sem depender de datas específicas. Alcance novos patamares de crescimento com estratégias comprovadas.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -223,12 +223,12 @@
                     <div class="container d-grid grid-md-2">
                         <div class="box-left">
                             <h2 class="title-h2 p-relative body-font  heading-color text-upper">
-                                Boas vindas!<br />Nós somos a <br><b>Fapas Digital</b>.
+                                Boas Vindas!<br />Nós somos a <br><b>Fapas Digital</b>.
                             </h2>
                             <p class="dsn-heading-title d-inline-block p-relative mt-30">
-                                Fundada em 2019, A Fapas Digital se tornou uma das maiores especialistas em E-commerces do ramo.
+                                Fundada em 2019, A Fapas Digital se tornou uma das maiores especialistas em E-commerce's do ramo.
                                 <span class="mt-10 d-block">
-                                Uma união de pessoas com grande experiência na área de growth, marketing e vendas, que trazem abordagens inovadoras com foco total em vendas e resultados.
+                                Uma união de pessoas com grande experiência na área de growth, marketing, publicidade e vendas, que trazem abordagens inovadoras com foco total em vendas e resultados.
                                 </span>
                             </p>
                         </div>
