--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <div class="img-box-parallax before-z-index dsn-animate dsn-effect-down h-v-80"
                         data-dsn-triggerhook="bottom" data-dsn-grid="move-up" data-overlay="0">
                         <picture>
-                            <source srcset="assets/images/video.webp" width="1920" height="824" type="image/webp" media="(min-width: 1080px)" />
+                            <source srcset="assets/images/video.jpg" width="1920" height="824" type="image/webp" media="(min-width: 1080px)" />
                             <source srcset="assets/images/video.jpeg" width="1920" height="824" type="image/jpeg" media="(min-width: 1080px)" />
         
                             <source srcset="assets/images/video-mobile.webp" width="1080" height="1080" type="image/webp" />
@@ -136,7 +136,7 @@
                                 </div>
                             </div>
                             <p class="mt-20 v-dark-head h5">
-                                Vamos entrar em contato com você para entendermos juntos como vamos implementa-lo no seu negócio
+                                Vamos entrar em contato com você para entendermos juntos como vamos implementá-lo no seu negócio
                             </p>
                             <div class="cta-button dsn-normal-btn dsn-icon-heading-color d-flex justify-content-center mt-60">
                                 <a class="dsn-btn dsn-border border-color-default background-theme border-rdu move-circle"
@@ -237,7 +237,7 @@
                             <div class="dsn-bg-mask w-100 h-50 bottom-0  z-index-1"></div>
                             <div class="img-first h-100">
                                 <picture>
-                                    <source srcset="assets/images/us.webp" width="1080" height="715" type="image/webp" />
+                                    <source srcset="assets/images/us.jpg" width="1080" height="715" type="image/webp" />
                                     <source srcset="assets/images/us.jpeg" width="1080" height="715" type="image/jpeg" />
                 
                                     <img class="cover-bg-img" src="assets/images/us.jpg" alt="Foto dos dois sócios da empresa: Antony e Brener" />
@@ -510,7 +510,7 @@
                             </div>
                             <div class="footer-bottom mt-60 pt-30 border-top pb-30 text-center">
                                 <p class="over-hidden">
-                                    © 2024
+                                    <small> Copyright &#169; 2019-2024 Fapas Digital Media &#174;. All Rights Reserved </small>
                                 </p>
                             </div>
                         </div>
@@ -523,5 +523,5 @@
         <script src="assets/js/main-min.js"></script>
     </body>
 
-<!-- Mirrored from lp.manure.marketing/vsl/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 18 May 2024 20:17:08 GMT -->
+
 </html>
