--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
         <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
         <link rel="manifest" href="site.webmanifest" />
-        <link rel="mask-icon" href="safari-pinned-tab.svg" color="#eecc11" />
+        <!--<link rel="mask-icon" href="safari-pinned-tab.svg" color="#eecc11" />-->
         <meta name="apple-mobile-web-app-title" content="Venda produtos todos os dias  | Fapas Digital" />
         <meta name="application-name" content="Venda produtos todos os dias  | Fapas Digital" />
         <meta name="msapplication-TileColor" content="#222222" />
@@ -81,7 +81,7 @@
                             <div class="intro-project w-100">
                                 <div class="intro-title ">
                                     <div id="hero_title" class="mt-20">
-                                        <h1 class="title text-upper">O seu e-commerce não vai mais precisar de [...]</h1>
+                                        <h1 class="title text-upper">O SEU E-COMMERCE eliminando a incerteza, garantindo vendas consistentes todos os dias !</h1>
                                     </div>
                                     <p class="mt-20 max-w750 h3 theme-color">Vender produtos de maneira previsível se tornará a parte mais simples da sua rotina</p>
                                     <div class="dsn-def-btn dsn-hover-icon dsn-icon-heading-color mt-40 d-flex">
@@ -499,11 +499,11 @@
                                     <ul class="dsn-socials box-social mt-20 dsn-icon-heading-color">
                                         <li><a href="https://www.instagram.com/fapas.digital" target="_blank" rel="nofollow"
                                             class="init-color move-circle border-color-default" data-dsn="parallax"><span
-                                            class="dsn-icon"><i class="fab fa-instagram"></i></span><span>IG</span></a>
+                                            class="dsn-icon"><i class="fa fa-instagram"></i></span><span>IG</span></a>
                                         </li>
                                         <li><a href="https://www.facebook.com/fapas.digital" target="_blank" rel="nofollow"
                                             class="init-color move-circle border-color-default" data-dsn="parallax"><span
-                                                class="dsn-icon"><i class="fab fa-facebook-f"></i></span><span>FB</span></a>
+                                                class="dsn-icon"><i class="fab fa-facebook"></i></span><span>FB</span></a>
                                         </li>
                                     </ul>
                                 </div>
