--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
         <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
         <link rel="manifest" href="site.webmanifest" />
-        <!--<link rel="mask-icon" href="safari-pinned-tab.svg" color="#eecc11" />-->
+        <!--<link rel="mask-icon" href="safari-pinned-tab.svg" color="#8b2ff5" />-->
         <meta name="apple-mobile-web-app-title" content="Venda produtos todos os dias  | Fapas Digital" />
         <meta name="application-name" content="Venda produtos todos os dias  | Fapas Digital" />
         <meta name="msapplication-TileColor" content="#222222" />
@@ -161,12 +161,26 @@
                             <div class="dsn-up service-item p-relative grid-item ">
                                 <div class="service-item-inner number-item h-100 background-section border-rdu">
                                     <div class="dsn-icon">
-                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960"><path d="M241-80H135q-23 0-39-16t-16-39v-106h31v106q0 10 7 17t17 7h106v31Zm478 0v-31h106q10 0 17-7t7-17v-106h31v106q0 23-16 39t-39 16H719ZM480-253q-107 0-191-60-85-59-130-167 45-108 130-168 84-60 191-60t191 60q85 60 130 168-45 108-130 167-84 60-191 60Zm-1-31q94 0 170-52 75-51 117-144-42-93-117-145-76-52-170-52-93 0-168 52-76 52-118 145 42 93 118 144 75 52 168 52Zm1-85q47 0 79-32 32-33 32-79 0-47-32-79t-79-32q-47 0-79 32t-32 79q0 47 32 79 33 32 79 32Zm0-31q-33 0-57-23-23-24-23-57 0-34 23-57 24-24 57-24 34 0 57 24 24 23 24 57 0 33-24 57-23 23-57 23ZM80-719v-106q0-23 16-39t39-16h106v31H135q-10 0-17 7t-7 17v106H80Zm769 0v-106q0-10-7-17t-17-7H719v-31h106q23 0 39 16t16 39v106h-31ZM480-480Z"/></svg>
+                                        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve">
+                                            <g id="Layer_1">
+                                                <path d="M48.779,9.635L42.77,7.23l-2.404-6.01L37.22,4.365C33.521,2.17,29.318,1,25,1C11.767,1,1,11.767,1,25s10.767,24,24,24
+                                                    s24-10.767,24-24c0-4.318-1.17-8.521-3.365-12.22L48.779,9.635z M41.23,8.77l3.99,1.596l-2.462,2.461L38.77,11.23l-1.596-3.989
+                                                    l2.461-2.462L41.23,8.77z M47,25c0,12.131-9.869,22-22,22S3,37.131,3,25S12.869,3,25,3c3.788,0,7.485,0.971,10.767,2.818
+                                                    l-0.941,0.941l2,5.001l-1.259,1.259C32.746,10.526,29.052,9,25,9C16.178,9,9,16.178,9,25s7.178,16,16,16s16-7.178,16-16
+                                                    c0-4.052-1.526-7.746-4.018-10.568l1.259-1.259l5.001,2l0.941-0.941C46.029,17.515,47,21.212,47,25z M31,25c0,3.309-2.691,6-6,6
+                                                    s-6-2.691-6-6s2.691-6,6-6c1.294,0,2.49,0.416,3.471,1.115l-2.959,2.959C25.347,23.031,25.178,23,25,23c-1.104,0-2,0.895-2,2
+                                                    c0,1.105,0.896,2,2,2s2-0.895,2-2c0-0.178-0.031-0.347-0.074-0.512l2.959-2.959C30.584,22.51,31,23.706,31,25z M29.898,18.688
+                                                    C28.542,17.634,26.846,17,25,17c-4.411,0-8,3.589-8,8s3.589,8,8,8s8-3.589,8-8c0-1.846-0.634-3.542-1.688-4.898l4.257-4.257
+                                                    C37.7,18.303,39,21.499,39,25c0,7.72-6.28,14-14,14s-14-6.28-14-14s6.28-14,14-14c3.5,0,6.697,1.3,9.154,3.432L29.898,18.688z"></path>
+                                            </g>
+                                            <g>
+                                            </g>
+                                            </svg>
                                     </div>
                                     <div class="service-content p-relative">
-                                        <h3 class="service_title h5">Não dependa mais de indicações</h4>
+                                        <h3 class="service_title h5">CONVERSÃO GARANTIDA</h4>
                                         <div class="service_description mt-10 max-w570 dsn-auto">
-                                            <p>Desenvolva sua própria rede de clientes e não dependa mais de indicações para crescer o seu negócio</p>
+                                            <p>Desenvolva sua própria rede de clientes com técnicas de conversão comprovadas. Garanta um fluxo constante de vendas previsíveis.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -175,7 +189,22 @@
                             <div class="dsn-up service-item p-relative grid-item style-box">
                                 <div class="service-item-inner number-item h-100 background-section border-rdu">
                                     <div class="dsn-icon">
-                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960"><path d="M471-200q-13 0-22-9t-9-22v-223L221-731q-8-9-2-19t16-10h490q10 0 16 10t-2 19L520-454v223q0 13-9 22t-22 9h-18Zm9-253 218-276H262l218 276Zm0 0Z"/></svg>
+                                        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 100.355 100.352" style="enable-background:new 0 0 100.355 100.352;" xml:space="preserve">
+                                            <g>
+                                                <path d="M41.346,48.366c-7.64,0-13.855,6.214-13.855,13.852S33.706,76.07,41.346,76.07c7.636,0,13.849-6.214,13.849-13.852
+                                                    C55.194,54.58,48.982,48.366,41.346,48.366z M41.346,73.07c-5.986,0-10.855-4.868-10.855-10.852c0-5.983,4.87-10.852,10.855-10.852
+                                                    c5.982,0,10.849,4.868,10.849,10.852C52.194,68.202,47.328,73.07,41.346,73.07z"></path>
+                                                <path d="M12.21,48.366c-0.829,0-1.5,0.671-1.5,1.5V74.57c0,0.829,0.671,1.5,1.5,1.5s1.5-0.671,1.5-1.5V49.866
+                                                    C13.71,49.038,13.039,48.366,12.21,48.366z"></path>
+                                                <path d="M70.008,48.366c-0.829,0-1.5,0.671-1.5,1.5V74.57c0,0.829,0.671,1.5,1.5,1.5s1.5-0.671,1.5-1.5V49.866
+                                                    C71.508,49.038,70.836,48.366,70.008,48.366z"></path>
+                                                <path d="M94.459,22.328h-72.85c-0.829,0-1.5,0.671-1.5,1.5v7.348H13.45c-0.829,0-1.5,0.671-1.5,1.5v8.172H4.586
+                                                    c-0.829,0-1.5,0.671-1.5,1.5v39.738c0,0.829,0.671,1.5,1.5,1.5h72.85c0.829,0,1.5-0.671,1.5-1.5v-8.172H86.3
+                                                    c0.829,0,1.5-0.671,1.5-1.5v-7.352h6.659c0.829,0,1.5-0.671,1.5-1.5V23.827C95.959,23,95.287,22.328,94.459,22.328z M75.936,80.587
+                                                    H6.086V43.849h69.85V80.587z M78.936,70.915V42.349c0-0.829-0.671-1.5-1.5-1.5H14.95v-6.672H84.8v36.738H78.936z M92.959,62.063
+                                                    H87.8V32.676c0-0.829-0.671-1.5-1.5-1.5H23.109v-5.848h69.85L92.959,62.063L92.959,62.063z"></path>
+                                            </g>
+                                            </svg>
                                     </div>
                                     <div class="service-content p-relative">
                                         <h3 class="service_title h5">Venda Previsível todos os dias </h4>
@@ -189,7 +218,19 @@
                             <div class="dsn-up service-item p-relative grid-item style-box">
                                 <div class="service-item-inner number-item h-100 background-section border-rdu">
                                     <div class="dsn-icon">
-                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960"><path d="M40-257v-30q0-35 38-58t99-23l18 1 22 3q-6 15-9 30-3 14-3 29v48H40Zm240 0v-45q0-24 14-44t41-35q28-14 64-22 37-7 81-7 45 0 81 7 36 8 64 22 27 15 41 35t14 44v45H280Zm475 0v-48q0-16-2-31-3-15-10-28l23-3 19-1q60 0 98 23 37 23 37 58v30H755Zm-445-31h340v-11q2-36-44-58t-126-22q-79 0-126 22-46 22-44 58v11ZM176-401q-22 0-37-15t-15-37q0-21 15-36 15-16 37-16 21 0 37 16 15 15 15 37 0 20-15 36-15 15-37 15Zm608 0q-21 0-36-15-16-16-16-37t16-36q15-16 37-16t37 16q15 15 15 36 0 22-15 37t-38 15Zm-304-39q-36 0-62-26-26-25-26-62t26-62q25-25 62-25t62 25q26 25 26 62 0 36-25 62-26 26-63 26Zm1-31q23 0 40-16 16-17 16-41t-16-40q-17-17-41-17-23 0-40 17-17 16-17 40t17 41q16 16 41 16Zm-1 183Zm0-240Z"/></svg>
+                                        <svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="1.99999in" height="1.99999in" version="1.1" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd" viewBox="0 0 2000 2000" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                            <defs>
+                                             <style type="text/css">
+                                              
+                                               .fil0 {fill:#000002}
+                                              
+                                             </style>
+                                            </defs>
+                                            <g id="Layer_x0020_1">
+                                             <metadata id="CorelCorpID_0Corel-Layer"></metadata>
+                                             <path class="fil0" d="M359 828l0 -139c0,-34 52,-34 52,0l0 139 98 0 0 -139c0,-34 51,-34 51,0l0 139 49 0 0 -135c0,-47 -24,-91 -64,-115 -49,43 -122,43 -171,0 -39,24 -64,68 -64,115l0 135 49 0zm865 135l-448 0c-23,0 -41,-19 -41,-42l0 -204c0,-96 56,-184 144,-224 36,-16 38,50 121,50 83,0 85,-66 121,-50 88,40 144,128 144,224l0 204c0,23 -18,42 -41,42zm-438 -52l64 0 0 -198c0,-34 52,-34 52,0l0 198 196 0 0 -198c0,-34 52,-34 52,0l0 198 64 0 0 -194c0,-69 -38,-134 -98,-168 -65,61 -167,61 -232,0 -60,34 -98,99 -98,168l0 194 0 0zm214 -427c-93,0 -169,-76 -169,-169 0,-93 76,-168 169,-168 93,0 169,75 169,168 0,93 -76,169 -169,169zm0 -286c-64,0 -117,53 -117,117 0,65 53,117 117,117 64,0 117,-52 117,-117 0,-64 -53,-117 -117,-117zm0 1655c-200,0 -362,-162 -362,-362l0 -422c0,-15 11,-26 26,-26l194 0c14,0 26,11 26,26l0 430c0,64 52,116 116,116 64,0 116,-52 116,-116l0 -430c0,-15 12,-26 26,-26l194 0c15,0 26,11 26,26l0 422c0,200 -162,362 -362,362zm-311 -758l0 90 143 0 0 -90 -143 0zm0 142l0 254c0,171 140,311 311,311 171,0 311,-140 311,-311l0 -254 -143 0 0 262c0,93 -76,168 -168,168 -92,0 -168,-75 -168,-168l0 -262 -143 0zm622 -52l0 -90 -143 0 0 90 143 0zm-687 -305l-329 0c-20,0 -37,-17 -37,-38l0 -149c0,-73 43,-140 110,-171 33,-15 33,36 92,36 59,0 58,-51 91,-36 67,31 110,98 110,171l0 149c0,21 -17,38 -37,38zm-164 -398c-72,0 -131,-59 -131,-131 0,-72 59,-130 131,-130 72,0 130,58 130,130 0,72 -58,131 -130,131zm0 -210c-44,0 -79,36 -79,79 0,44 35,79 79,79 43,0 78,-35 78,-79 0,-43 -35,-79 -78,-79zm1245 605l-329 0c-20,0 -37,-16 -37,-37l0 -150c0,-73 43,-139 110,-170 33,-15 32,36 91,36 59,0 59,-51 92,-36 67,31 110,97 110,170l0 150c0,21 -17,37 -37,37zm-314 -51l49 0 0 -139c0,-34 51,-34 51,0l0 139 98 0 0 -139c0,-34 52,-34 52,0l0 139 49 0 0 -136c0,-46 -25,-90 -64,-114 -49,43 -122,43 -171,0 -40,24 -64,68 -64,114l0 136 0 0zm149 -347c-72,0 -130,-58 -130,-130 0,-72 58,-131 130,-131 72,0 131,59 131,131 0,72 -59,130 -131,130zm0 -209c-43,0 -78,36 -78,79 0,43 35,79 78,79 44,0 79,-36 79,-79 0,-43 -35,-79 -79,-79z"></path>
+                                            </g>
+                                           </svg>
                                     </div>
                                     <div class="service-content p-relative">
                                         <h3 class="service_title h5">ATRAÇÃO EFICAZ DE CLIENTES</h4>
