--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <!-- Service -->
                 <div class="container section-margin">
                     <div class="section-title mb-70 text-center d-flex flex-column">
-                        <h2 class="title-h2 text-upper">Entenda o método que está sendo procurado por tantos donos de e-commerce</h2>
+                        <h2 class="title-h2 text-upper">Entenda o porquê do método estar sendo procurado por tantos donos de e-commerce</h2>
                     </div>
                     <div class="list-with-number icon-top dsn-icon-theme-color text-center">
                         <div class="dsn-service d-grid grid-lg-4 grid-md-2 grid-sm-1 dsn-masonry-grid dsn-isotope"
