--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     </div>
                     <div class="vsl-button dsn-normal-btn dsn-icon-heading-color d-flex justify-content-center">
                         <a class="dsn-btn dsn-border border-color-default vid background-section move-circle has-icon-left"
-                           href="link" title="Assista ao vídeo" target="_blank" rel="nofollow" data-dsn="parallax">
+                           href="https://vimeo.com/984537346" title="Assista ao vídeo" target="_blank" rel="nofollow" data-dsn="parallax">
                             <span class="dsn-icon dsn-bg-before heading-color z-index-1">
                                 <i class="fas fa-play"></i>
                             </span>
@@ -281,7 +281,7 @@
                                     <source srcset="assets/images/us.jpg" width="1080" height="715" type="image/webp" />
                                     <source srcset="assets/images/us.jpeg" width="1080" height="715" type="image/jpeg" />
                 
-                                    <img class="cover-bg-img" src="assets/images/us.jpg" alt="Foto dos dois sócios da empresa: Antony e Brener" />
+                                    <img class="cover-bg-img" src="assets/images/us.jpg" alt="Foto da equipe da empresa: Fábio, Rafael e Pablo" />
                                 </picture>
                             </div>
                         </div>
