--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                                             <span class="dsn-icon dsn-bg-before btn-icon-left heading-color z-index-1">
                                                 <i class="fas fa-angle-right" aria-hidden="true"></i>
                                             </span>
-                                            <span class="title-btn p-relative z-index-1">Assista o vídeo com muita atenção (são menos de x minutos)</span>
+                                            <span class="title-btn p-relative z-index-1">Assista o vídeo com muita atenção (são só 03 minutos e 30 segundos)</span>
                                         </a>
                                     </div>
                                 </div>
