--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html class="no-js" lang="pt-br">
 <head>
-        <!-- Hotjar Tracking Code for https://ortodontiabr.com/ -->
+        <!-- Hotjar Tracking Code for LP - Fapas  -->
         <script>
             (function(h,o,t,j,a,r){
                 h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-                h._hjSettings={hjid:3591085,hjsv:6};
+                h._hjSettings={hjid:5061567,hjsv:6};
                 a=o.getElementsByTagName('head')[0];
                 r=o.createElement('script');r.async=1;
                 r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
