--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                             <source srcset="assets/images/video.jpg" width="1920" height="824" type="image/webp" media="(min-width: 1080px)" />
                             <source srcset="assets/images/video.jpeg" width="1920" height="824" type="image/jpeg" media="(min-width: 1080px)" />
         
-                            <source srcset="assets/images/video-mobile.webp" width="1080" height="1080" type="image/webp" />
+                            <source srcset="assets/images/video.jpg" width="1080" height="1080" type="image/webp" />
                             <source srcset="assets/images/video-mobile.jpeg" width="1080" height="1080" type="image/jpeg" />
         
                             <img class="video-overlay has-bigger-scale cover-bg-img has-direction" src="assets/images/video.jpg" alt="Banner do vídeo, contendo três pessoas de braços cruzados" />
