melhora SEO + loader

--- a/index.html
+++ b/index.html
@@ -14,7 +14,26 @@
             href="assets/images/favicons/favicon-16x16.png" />
         <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
         <meta name="description" content="Qutiiz HTML Template For Business" />
-
+        <!--Melhora de SEO-->
+        <meta http-equiv="x-ua-compatible" content="ie=edge" />
+        <link rel="canonical" href="https://fapas.com.br" />
+        <meta name="description" content="Vender todo dia de maneira previsível se tornará a parte mais simples do seu negócio" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://fapas.com.br" />
+        <meta property="og:title" content="Venda produtos todo dia | Fapas Digital" />
+        <meta property="og:description" content="Vender produtos semanais de maneira previsível se tornará a parte mais simples da sua rotina" />
+        <meta property="og:site_name" content="Fapas Digital" />
+        <meta property="og:locale" content="pt_BR" />
+        <meta name="twitter:card" content="sumário" />
+        <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+        <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+        <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+        <link rel="manifest" href="site.webmanifest" />
+        <!--<link rel="mask-icon" href="safari-pinned-tab.svg" color="#8b2ff5" />-->
+        <meta name="apple-mobile-web-app-title" content="Venda produtos todos os dias  | Fapas Digital" />
+        <meta name="application-name" content="Venda produtos todos os dias  | Fapas Digital" />
+        <meta name="msapplication-TileColor" content="#222222" />
+        <meta name="theme-color" content="#222222" />
         <!-- fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -1945,7 +1964,7 @@
                                             class="fab fa-facebook"></i></a>
                                     <a href="https://www.linkedin.com/company/fapas-digital-media/"><i
                                             class="fab fa-linkedin"></i></a>
-                                    <a href="https://www.instagram.com/fapas.digital/"><i
+                                    <a href="https://www.instagram.com/fapas.com.br"><i
                                             class="fab fa-instagram"></i></a>
                                 </div>
                             </div>
