--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
     <body>
         <div class="preloader">
-            <img class="preloader__image" width="100"
+            <img class="preloader__image" width="150"
                 src="assets/images/loader.png" alt />
         </div>
         <!-- /.preloader -->
@@ -358,13 +358,7 @@
                             </div>
                             <div class="col-xl-6 col-lg-6">
                                 <div class="services-one__top-text-box">
-                                    <p class="services-one__top-text">There
-                                        are
-                                        many variations of passages of Lorem
-                                        Ipsum
-                                        available, but the majority have
-                                        suffered alteration in some
-                                        form.</p>
+                                    <p class="services-one__top-text">...</p>
                                 </div>
                             </div>
                         </div>
