--- a/index.html
+++ b/index.html
@@ -1923,7 +1923,7 @@
                                     <h2 class="cta-one__title">a paixão, a tentativa e a habilidade podem <br> te levar a lugares inimagináveis</h2>
                                 </div>
                                 <div class="cta-one__right">
-                                    <a href=""
+                                    <a href="https://api.whatsapp.com/send?phone=5538997530017"
                                         class="cta-one__btn thm-btn">Vamos Começar</a>
                                 </div>
                             </div>
